ros2_ws/log/build_2024-05-14_14-19-09/py_launch/stderr.log
  File "/home/joe/workspaces/ros2_ws/install/py_launch/lib/python3.10/site-packages/py_launch/launch.py", line 30
    Node(
    ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

